--- a/CodeCoverage/Report/Summary.xml
+++ b/CodeCoverage/Report/Summary.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <CoverageReport scope="Summary">
   <Summary>
-    <Generatedon>25/09/2023 - 11:02:56</Generatedon>
+    <Generatedon>28/09/2023 - 14:17:04</Generatedon>
     <Parser>MultiReportParser (2x OpenCoverParser)</Parser>
     <Assemblies>2</Assemblies>
-    <Classes>6</Classes>
-    <Files>6</Files>
-    <Coveredlines>227</Coveredlines>
-    <Uncoveredlines>40</Uncoveredlines>
-    <Coverablelines>267</Coverablelines>
-    <Totallines>578</Totallines>
-    <Linecoverage>85</Linecoverage>
+    <Classes>7</Classes>
+    <Files>7</Files>
+    <Coveredlines>226</Coveredlines>
+    <Uncoveredlines>81</Uncoveredlines>
+    <Coverablelines>307</Coverablelines>
+    <Totallines>640</Totallines>
+    <Linecoverage>73.6</Linecoverage>
     <Coveredbranches>0</Coveredbranches>
     <Totalbranches>0</Totalbranches>
-    <Coveredmethods>39</Coveredmethods>
-    <Totalmethods>41</Totalmethods>
-    <Methodcoverage>95.1</Methodcoverage>
+    <Coveredmethods>41</Coveredmethods>
+    <Totalmethods>48</Totalmethods>
+    <Methodcoverage>85.4</Methodcoverage>
   </Summary>
   <Coverage>
-    <Assembly name="GameAssembly" classes="5" coverage="78.4" coveredlines="146" coverablelines="186" totallines="436" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="29" totalmethods="31" methodcoverage="93.5">
-      <Class name="Asteroid" coverage="84.2" coveredlines="16" coverablelines="19" totallines="60" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="4" totalmethods="4" methodcoverage="100" />
-      <Class name="Game" coverage="100" coveredlines="40" coverablelines="40" totallines="67" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="7" totalmethods="7" methodcoverage="100" />
+    <Assembly name="GameAssembly" classes="6" coverage="67.2" coveredlines="148" coverablelines="220" totallines="488" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="30" totalmethods="37" methodcoverage="81">
+      <Class name="Asteroid" coverage="80.9" coveredlines="17" coverablelines="21" totallines="65" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="5" totalmethods="5" methodcoverage="100" />
+      <Class name="Game" coverage="97.5" coveredlines="40" coverablelines="41" totallines="69" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="7" totalmethods="7" methodcoverage="100" />
       <Class name="Laser" coverage="81.2" coveredlines="13" coverablelines="16" totallines="56" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="2" totalmethods="2" methodcoverage="100" />
-      <Class name="Ship" coverage="60" coveredlines="39" coverablelines="65" totallines="130" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="8" totalmethods="10" methodcoverage="80" />
-      <Class name="Spawner" coverage="82.6" coveredlines="38" coverablelines="46" totallines="123" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="8" totalmethods="8" methodcoverage="100" />
+      <Class name="Ship" coverage="42.6" coveredlines="38" coverablelines="89" totallines="160" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="8" totalmethods="12" methodcoverage="66.6" />
+      <Class name="Spawner" coverage="86.9" coveredlines="40" coverablelines="46" totallines="123" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="8" totalmethods="8" methodcoverage="100" />
+      <Class name="Speed" coverage="0" coveredlines="0" coverablelines="7" totallines="15" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="0" totalmethods="3" methodcoverage="0" />
     </Assembly>
-    <Assembly name="Tests" classes="1" coverage="100" coveredlines="81" coverablelines="81" totallines="142" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="10" totalmethods="10" methodcoverage="100">
-      <Class name="TestSuite" coverage="100" coveredlines="81" coverablelines="81" totallines="142" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="10" totalmethods="10" methodcoverage="100" />
+    <Assembly name="Tests" classes="1" coverage="89.6" coveredlines="78" coverablelines="87" totallines="152" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="11" totalmethods="11" methodcoverage="100">
+      <Class name="TestSuite" coverage="89.6" coveredlines="78" coverablelines="87" totallines="152" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="11" totalmethods="11" methodcoverage="100" />
     </Assembly>
   </Coverage>
 </CoverageReport>
